// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Query Resolver Correctly Resolves Add User Query 1`] = `
Object {
  "data": Object {
    "saveQuery": Object {
      "userQueries": Array [
        Object {
          "description": "test",
          "id": "id_02",
          "name": "test",
          "searchText": "test",
        },
        Object {
          "description": "Testing the search UI using selenium/nightwatch",
          "id": "id_03",
          "name": "SeleniumTesting",
          "searchText": "kind:pod",
        },
      ],
    },
  },
}
`;

exports[`User Query Resolver Correctly Resolves Get User Query 1`] = `
Object {
  "data": Object {
    "items": Array [
      Object {
        "description": "test",
        "id": "id_02",
        "name": "test",
        "searchText": "test",
      },
      Object {
        "description": "Testing the search UI using selenium/nightwatch",
        "id": "id_03",
        "name": "SeleniumTesting",
        "searchText": "kind:pod",
      },
    ],
  },
}
`;

exports[`User Query Resolver Correctly Resolves Remove User Query 1`] = `
Object {
  "data": Object {
    "deleteQuery": Object {
      "userQueries": Array [
        Object {
          "description": "test",
          "id": "id_10",
          "name": "test",
          "searchText": "test",
        },
      ],
    },
  },
}
`;
